--- a/quicksortExterno/nbproject/project.properties
+++ b/quicksortExterno/nbproject/project.properties
@@ -51,7 +51,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=
+main.class=quick_sort_externo.Quick_Sort_Externo
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
